update to style.css to fix layout issue on some browsers for form fields

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,63 +108,66 @@ iframe {
 #submit {
     float: left;
     position: relative;
-    left: 18px;
-    top: 82px;
+    left: -560px;
+    top: 318px;
 }    
 #submit:hover {
 	float: left;
     position: relative;
-    left: 18px;
-    top: 82px;
+    left: -560px;
+    top: 318px;
     color:#1acdc4;
 }
 #reset {
 	float: left;
     position: relative;
-    left: 22px;
-    top: 82px;
+    left: 70px;
+    top: 90px;
 }
 #reset:hover {
 	float: left;
     position: relative;
-    left: 22px;
-    top: 82px;
+    left: 70px;
+    top: 90px;
     color:#1acdc4;
 }
 #messageinput {
 	position: relative;
-    top: 73px;
-    left: 18px;
+    top: 83px;
+    left: 24px;
     padding: 8px;
     padding-bottom: 200px;
+    padding-right: 68px;
 }
 #messagetag {
     position: relative;
-    top: 65px;
-    left: 18px;
+    top: 76px;
+    left: 23px;
 }
 #emailinput {
 	position: relative;
-    top: 50px;
-    left: 19px;
+    top: 52px;
+    left: 22px;
     padding: 8px;
+    padding-right: 68px;
 }
 #emailtag {
     position: relative;
     top: 52px;
-    left: 10px;
+    left: 13px;
     padding: 8px;
 }
 #nameinput {
     position: relative;
     top: 44px;
-    left: 18px;
+    left: -21px;
     padding: 8px;
+    padding-right: 68px;
 }
 #nametag {
     position: relative;
-    top: 38px;
-    left: 18px;
+    top: 20px;
+    left: 20px;
 }
 input {
 	float: left;
